Update a lot of content